--- a/css/style.css
+++ b/css/style.css
@@ -699,54 +699,6 @@ body {
 header {
   height: 58rem;
   overflow: hidden; }
-  header .navbar {
-    background-color: #15171a;
-    padding: 0; }
-    header .navbar__main {
-      color: white; }
-      header .navbar__main .navbar-nav li {
-        padding: 2.2rem 1rem; }
-        header .navbar__main .navbar-nav li .nav-link {
-          color: #fff;
-          font-size: 1.4rem; }
-          header .navbar__main .navbar-nav li .nav-link:hover {
-            color: #ffb900; }
-      header .navbar__main .navbar-nav .active .nav-link {
-        color: #ffb900; }
-      header .navbar__main .others-option a {
-        color: #fff; }
-        header .navbar__main .others-option a i {
-          padding: 5px 10px;
-          border: 1px solid;
-          border-radius: 50%; }
-      header .navbar__main .others-option .btn {
-        font-size: 1.5rem;
-        border: 1px solid #fff;
-        padding: 0.7rem 2rem;
-        background: linear-gradient(to right, #eb883b, #f26900); }
-        header .navbar__main .others-option .btn:hover {
-          background: linear-gradient(to right, #55c57a, #f9461d); }
-      header .navbar__main--icon {
-        position: relative;
-        margin-top: 0rem; }
-        header .navbar__main--icon, header .navbar__main--icon::before, header .navbar__main--icon::after {
-          width: 3rem;
-          height: .3rem;
-          background-color: #fff;
-          display: inline-block; }
-        header .navbar__main--icon::before, header .navbar__main--icon::after {
-          content: "";
-          position: absolute;
-          left: 0;
-          transition: all .2s; }
-        header .navbar__main--icon::before {
-          top: -.8rem; }
-        header .navbar__main--icon::after {
-          top: .8rem; }
-      header .navbar__main .navbar-toggler {
-        width: 4.5rem;
-        height: 4.2rem;
-        border-color: white; }
   header .carousel-control-prev {
     padding: .5rem 1rem 1rem 1rem;
     width: 4rem;
@@ -801,6 +753,55 @@ header {
       margin-bottom: 5rem;
       font-size: 1.7rem; }
 
+.navbar {
+  background-color: #15171a;
+  padding: 0; }
+  .navbar__main {
+    color: white; }
+    .navbar__main .navbar-nav li {
+      padding: 2.2rem 1rem; }
+      .navbar__main .navbar-nav li .nav-link {
+        color: #fff;
+        font-size: 1.4rem; }
+        .navbar__main .navbar-nav li .nav-link:hover {
+          color: #ffb900; }
+    .navbar__main .navbar-nav .active .nav-link {
+      color: #ffb900; }
+    .navbar__main .others-option a {
+      color: #fff; }
+      .navbar__main .others-option a i {
+        padding: 5px 10px;
+        border: 1px solid;
+        border-radius: 50%; }
+    .navbar__main .others-option .btn {
+      font-size: 1.5rem;
+      border: 1px solid #fff;
+      padding: 0.7rem 2rem;
+      background: linear-gradient(to right, #eb883b, #f26900); }
+      .navbar__main .others-option .btn:hover {
+        background: linear-gradient(to right, #55c57a, #f9461d); }
+    .navbar__main--icon {
+      position: relative;
+      margin-top: 0rem; }
+      .navbar__main--icon, .navbar__main--icon::before, .navbar__main--icon::after {
+        width: 3rem;
+        height: .3rem;
+        background-color: #fff;
+        display: inline-block; }
+      .navbar__main--icon::before, .navbar__main--icon::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        transition: all .2s; }
+      .navbar__main--icon::before {
+        top: -.8rem; }
+      .navbar__main--icon::after {
+        top: .8rem; }
+    .navbar__main .navbar-toggler {
+      width: 4.5rem;
+      height: 4.2rem;
+      border-color: white; }
+
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg); }
@@ -811,6 +812,99 @@ header {
     transform: rotate(0deg); }
   100% {
     transform: rotate(360deg); } }
+.page-title {
+  position: relative;
+  z-index: 1;
+  background-image: url(../img/page-bg.jpg);
+  padding: 24rem 0 14rem 0; }
+  .page-title::before {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    opacity: 0.9; }
+  .page-title__content h2 {
+    color: #fff;
+    font-weight: 700;
+    font-family: "Lobster Two";
+    font-size: 4.5rem;
+    margin-bottom: 2rem; }
+  .page-title__content ul li {
+    font-size: 1.6rem;
+    list-style: none;
+    display: inline-block; }
+    .page-title__content ul li:last-child {
+      color: #ff7730; }
+    .page-title__content ul li i {
+      margin: 0 1rem; }
+    .page-title__content ul li a {
+      text-decoration: none;
+      color: #fff; }
+    .page-title__content ul li:hover a {
+      color: #ff7730; }
+
+@media (min-width: 320px) and (max-width: 767.98px) {
+  .page-title {
+    padding-top: 10rem;
+    padding-bottom: 5rem; }
+    .page-title__content h2 {
+      font-size: 3rem; }
+    .page-title__content ul li {
+      font-size: 1.4rem; }
+
+  .our-histry-about-1 {
+    padding-bottom: 0; }
+
+  .our-histry-about-2 {
+    padding-top: 0rem;
+    padding-bottom: 0rem; }
+
+  .our-histry-event {
+    padding-bottom: 0; }
+    .our-histry-event .event-img-1 {
+      margin-bottom: 3rem; }
+      .our-histry-event .event-img-1 img {
+        width: 100%; }
+    .our-histry-event .event-img-2 {
+      margin-bottom: 3rem; }
+      .our-histry-event .event-img-2 img {
+        width: 100%; } }
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .page-title {
+    padding-top: 17rem;
+    padding-bottom: 10rem; }
+    .page-title__content h2 {
+      font-size: 4rem; }
+    .page-title__content ul li {
+      font-size: 1.6rem; }
+
+  .our-histry-about-1 {
+    padding-bottom: 5rem; }
+
+  .our-histry-about-2 {
+    padding-bottom: 8rem; }
+
+  .our-histry-event {
+    padding-bottom: 0; }
+    .our-histry-event .event-img-1 {
+      margin-bottom: 3rem; }
+      .our-histry-event .event-img-1 img {
+        width: 100%; }
+    .our-histry-event .event-img-2 img {
+      width: 100%; } }
+@media (min-width: 992px) {
+  .our-histry-about-1 {
+    padding-bottom: 0; }
+
+  .our-histry-about-2 {
+    padding-bottom: 10rem; }
+
+  .our-histry-event {
+    padding-bottom: 0; } }
 @media (min-width: 320px) and (max-width: 991.98px) {
   .single-history img {
     height: 28rem;
@@ -819,10 +913,6 @@ header {
   header {
     height: 50rem;
     overflow: hidden; }
-    header .navbar__main {
-      padding: 0 1rem !important; }
-    header .navbar__logo {
-      width: 9rem; }
     header .carousel-inner .carousel-item img {
       height: 100%; }
     header .carousel-inner .carousel-item .hero-slider-text {
@@ -849,6 +939,11 @@ header {
       top: 41.5rem;
       left: 50%;
       margin-left: 1rem; }
+
+  .navbar__main {
+    padding: 0 1rem !important; }
+  .navbar__logo {
+    width: 9rem; }
 
   .service {
     padding-top: 5rem;
