--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,4 +5,5 @@
 @import './Components/default-buttons';
 @import './Layout/header.scss';
 @import './Base/animations';
+@import './Pages/about';
 @import './Layout/responsive';
