--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,5 +5,7 @@
 @import './Components/default-buttons';
 @import './Layout/header.scss';
 @import './Base/animations';
-@import './Pages/about';
 @import './Layout/responsive';
+@import './Pages/about';
+@import './Pages/book-table';
+@import './Pages/404.scss';
