--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,89 @@
 @import './Pages/about';
 @import './Pages/book-table';
 @import './Pages/404.scss';
+//modal
+.modal {
+    margin-top: 15%;
+    overflow: visible !important;
+    &-dialog {}
+    &-content {
+        &__wrap {
+            .nav {
+                z-index: 999;
+                margin: -3rem 2rem 0rem 2rem;
+                background-color: #0277bd;
+                padding: 1.1rem;
+                border-radius: 5px;
+                &-item {
+                    width: 50%;
+                    text-align: center;
+                    transition: all .2s;
+                    &:hover {
+                        background-color: #2bbbad;
+                    }
+                    .active {
+                        color: #fff;
+                        background-color: #0a85cc;
+                        border: none;
+                        border-radius: 5px;
+                    }
+                }
+                &-link {
+                    color: #fff;
+                    padding: .8rem 1.6rem;
+                    border: none;
+                    font-size: 1.6rem;
+                    &:hover {
+                        border: none;
+                    }
+                }
+            }
+            .tab-content {
+                padding-top: 2rem;
+                .modal-body {
+                    padding: 2.4rem 3.2rem;
+                    &--form {
+                        position: relative;
+                        margin-top: 2.4rem;
+                        margin-bottom: 4.8rem;
+                        i {
+                            font-size: 2.4rem;
+                        }
+                        .form-control {
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            font-size: 1.6rem;
+                            width: calc(100% - 3.2rem);
+                            margin-left: 3.2rem;
+                            padding-top: 1.2rem;
+                            padding-bottom: .8rem;
+                            border: 0;
+                            border-bottom: 1px solid #ced4da;
+                            &:focus {
+                                font-size: 1.6rem;
+                                color: #495057;
+                                letter-spacing: .7px;
+                                font-weight: 410;
+                                padding-bottom: .8rem;
+                                border: 0;
+                                border-bottom: 1px solid #4285f4;
+                                box-shadow: 0 1px 0 0 #4285f4;
+                            }
+                        }
+                        label {
+                            font-size: 1.6rem;
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            margin-left: 3.2rem;
+                        }
+                    }
+                    #btnLogin {}
+                }
+            }
+        }
+    }
+}
+
+//end modal
