--- a/sass/Layout/header.scss
+++ b/sass/Layout/header.scss
@@ -63,6 +63,10 @@ header {
                     margin-bottom: 5rem;
                     font-size: 1.7rem;
                 }
+                a {
+                    text-decoration: none;
+                    color: #fff;
+                }
             }
         }
     }
