--- a/sass/Base/_typogaphy.scss
+++ b/sass/Base/_typogaphy.scss
@@ -32,8 +32,57 @@ body {
     border-radius: 0;
     padding: 0.7rem 2rem;
     margin-bottom: 0.5rem;
-    background: linear-gradient(to right, #eb883b, #f26900);
+    background-color: #f19d07;
+    border: 1px solid #f19d07;
     &:hover {
         background: linear-gradient(to right, #55c57a, #ffb900);
+        border: 1px solid #ffb900;
+    }
+}
+
+//page- title
+.page-title {
+    position: relative;
+    z-index: 1;
+    background-image: url(../img/page-bg.jpg);
+    padding: 24rem 0 14rem 0;
+    &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #000000;
+        opacity: 0.9;
+    }
+    &__content {
+        h2 {
+            color: #fff;
+            font-weight: 700;
+            font-family: 'Lobster Two', ;
+            font-size: 4.5rem;
+            margin-bottom: 2rem;
+        }
+        ul li {
+            font-size: 1.6rem;
+            list-style: none;
+            display: inline-block;
+            &:last-child {
+                color: #ff7730;
+            }
+            i {
+                margin: 0 1rem;
+            }
+            a {
+                text-decoration: none;
+                color: #fff;
+                transition: .3s;
+            }
+            &:hover a {
+                color: #ff7730;
+            }
+        }
     }
 }
