--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import './Pages/book-table';
 @import './Pages/404.scss';
 @import './Pages/shop';
+@import './Pages/blog';
 //Modal: Login / Register Form
 .modal {
     margin-top: 15%;
