--- a/css/style.css
+++ b/css/style.css
@@ -1406,6 +1406,99 @@ header {
   .page-blog .single-blog .blog__text {
     padding: 2rem; }
 
+.contact {
+  padding-top: 8rem;
+  padding-bottom: 8rem; }
+  .contact .section-title {
+    margin-bottom: 5rem; }
+  .contact__form input[type="text"],
+  .contact__form textarea {
+    width: 100%;
+    color: #ff7730;
+    font-size: 1.6rem;
+    outline: none;
+    box-sizing: border-box;
+    border: 1px solid #fff;
+    box-shadow: 0px 5px 28.5px 1.5px rgba(149, 154, 200, 0.1) !important;
+    width: 100%;
+    padding: 1rem 2rem; }
+    .contact__form input[type="text"]:hover,
+    .contact__form textarea:hover {
+      border: 1px solid #ff7730; }
+    .contact__form input[type="text"]:focus,
+    .contact__form textarea:focus {
+      border: 1px solid #ff7730;
+      background-color: rgba(157, 158, 157, 0.979);
+      font-weight: 500;
+      color: #fff; }
+  .contact__info {
+    padding-left: 3rem; }
+    .contact__info ul {
+      list-style: none; }
+      .contact__info ul li {
+        position: relative;
+        padding-left: 10rem;
+        color: #7d7d7d;
+        margin-bottom: 4rem; }
+        .contact__info ul li span {
+          display: block;
+          font-size: 1.8rem;
+          font-weight: 600;
+          color: #363636; }
+        .contact__info ul li a {
+          display: block;
+          color: #686464; }
+          .contact__info ul li a:hover {
+            color: #6b6868;
+            text-decoration: none; }
+    .contact__info--icon {
+      border: 1px solid #fff;
+      background-color: #f16d07;
+      color: #fff;
+      width: 6.5rem;
+      height: 6.5rem;
+      line-height: 6.5rem;
+      border-radius: 50%;
+      font-size: 2.5rem;
+      text-align: center;
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 1; }
+      .contact__info--icon::after {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: -8px;
+        border-radius: 50%;
+        border: 2px dashed #bbf3fa;
+        z-index: 1;
+        animation: spin 50s infinite linear;
+        -webkit-animation: spin 50s infinite linear;
+        -webkit-transition: all 0.5s;
+        transition: all 0.5s; }
+      .contact__info--icon:hover {
+        background-color: #bbf3fa; }
+        .contact__info--icon:hover::after {
+          border: 2px dashed #f16d07; }
+  .contact button {
+    margin-top: 2rem;
+    border: 0px;
+    padding: 1rem 1.5rem 1rem 1.5rem;
+    width: 100%; }
+    .contact button:hover {
+      background-color: #ffb900; }
+
+@media (min-width: 320px) and (max-width: 576px) {
+  .contact {
+    padding-top: 3rem;
+    padding-bottom: 5rem; }
+    .contact .section-title h2 {
+      font-size: 2.3rem; } }
 .modal {
   margin-top: 15%;
   overflow: visible !important; }
