--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import './Pages/404.scss';
 @import './Pages/shop';
 @import './Pages/blog';
+@import './Pages/contact';
 //Modal: Login / Register Form
 .modal {
     margin-top: 15%;
